[package]
name = "eth-secp256k1"
version = "0.5.7"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
homepage = "https://github.com/paritytech/rust-secp256k1/"
repository = "https://github.com/paritytech/rust-secp256k1/"
documentation = "https://www.wpsoftware.net/rustdoc/secp256k1/"
description = "Fork of Rust bindings for Pieter Wuille's `libsecp256k1` library. Implements ECDSA for the SECG elliptic curve group secp256k1 and related utilities."
keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
readme = "README.md"
build = "build.rs"

[build-dependencies]
cc = "1.0"
cfg-if = { version = "0.1" }

[lib]
name = "secp256k1"
path = "src/lib.rs"
crate-type = [ "lib", "rlib"]

[features]
unstable = []
default = ["std"]
dev = ["clippy"]
std = [
    "arrayvec/std",
    "libc/use_std",
    "clippy",
    "rand",
]

[dependencies]
arrayvec = { version = "0.4", default-features = false }
clippy = { version = "0.0", optional = true }
rand = { version = "0.4", optional = true }
libc = { version = "0.2", default-features = false }
wee_alloc = "0.4"
cfg-if = "0.1"

[dev-dependencies]
hex = "0.3.1"
